# webScraper

./: .format.ch  .gitignore  .gitmodules  CMakeLists.txt  SearchWords.js  articleValue.py  build.sh  buildNinja.sh  companies.json  createMarkdown.py  dbCleaner.py  dev.py  download_page.py  evaluate.py  extractArticle.py  getStocks.py  htmlParser.py  htmlTags.json  jsonParser.py  main.cpp  main.py  makefile  package-lock.json  parser.py  python-compilation.py  searchWords.json  test.py  visualizer.py  webPages.json
components/: extractArticle.cpp  htmlParser.cpp  jsonParser.cpp
json-content-editor/: package-lock.json  package.json
json-content-editor/public/: htmlTags.json  searchWords.json
src/: _contentCreator.py  _extractArticle.py  articleEvaluation.py  dataExtractor.py  databaseHandler.py  dbCleaner.py  download_page.py  extractArticle.py  getStockValue.py  htmlParser.py  indexGetter.py  jsonParser.py  visualizer.py  word2vec.py
